added main content

--- a/index.html
+++ b/index.html
@@ -16,12 +16,158 @@
         </div>
     </header>
 
-    <main>
+    <main class="flex wrap">
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
+        <div class="user">
+            <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
+            <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+        </div>
 
     </main>
 
-    <footer>
+    <footer class="d-flex justify-sb">
+        <div class="ft-left">
 
+        </div>
+        <div class="ft-middle">
+
+        </div>
+        <div class="ft-right"></div>
     </footer>
     
 </body>
