--- a/index.html
+++ b/index.html
@@ -160,14 +160,57 @@
 
     </main>
 
-    <footer class="d-flex justify-sb">
-        <div class="ft-left">
-
+    <footer class="d-flex justify-sb align-center">
+        <div class="ft-left d-flex align-center">
+            <div class="icon-txt d-flex flex-col">
+                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
+                <span>Mute</span>
+            </div>
+            <span class="chevron-up"><i class="fa-solid fa-chevron-up"></i></span>
+            <div class="icon-txt d-flex flex-col">
+                <span class="icon"><i class="fa-solid fa-video"></i></span>
+                <span>Stop Video</span>
+            </div>
+            <span class="chevron-up"><i class="fa-solid fa-chevron-up"></i></span>
         </div>
-        <div class="ft-middle">
-
+        <div class="ft-middle d-flex align-center">
+            <div class="icon-txt d-flex flex-col">
+                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
+                <span>Mute</span>
+            </div>
+            <div class="icon-txt d-flex flex-col">
+                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
+                <span>Mute</span>
+            </div>
+            <div class="icon-txt d-flex flex-col">
+                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
+                <span>Mute</span>
+            </div>
+            <div class="icon-txt d-flex flex-col">
+                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
+                <span>Mute</span>
+            </div>
+            <span class="chevron-up"><i class="fa-solid fa-chevron-up"></i></span>
+            <div class="icon-txt d-flex flex-col">
+                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
+                <span>Mute</span>
+            </div>
+            <div class="icon-txt d-flex flex-col">
+                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
+                <span>Mute</span>
+            </div>
+            <div class="icon-txt d-flex flex-col">
+                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
+                <span>Mute</span>
+            </div>
+            <div class="icon-txt d-flex flex-col">
+                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
+                <span>Mute</span>
+            </div>
         </div>
-        <div class="ft-right"></div>
+        <div class="ft-right d-flex align-center justify-center">
+            <span class="end-meeting">End Meeting</span>
+        </div>
     </footer>
     
 </body>
