--- a/index.html
+++ b/index.html
@@ -175,37 +175,37 @@
         </div>
         <div class="ft-middle d-flex align-center">
             <div class="icon-txt d-flex flex-col">
-                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
-                <span>Mute</span>
+                <span class="icon"><i class="fa-solid fa-user-plus"></i></i></span>
+                <span>Invite</span>
             </div>
             <div class="icon-txt d-flex flex-col">
-                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
-                <span>Mute</span>
+                <span class="icon"><i class="fa-solid fa-user-group"></i></span>
+                <span>Manage Participants</span>
             </div>
             <div class="icon-txt d-flex flex-col">
-                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
-                <span>Mute</span>
+                <span class="icon"><i class="fa-solid fa-chart-column"></i></span>
+                <span>Polling</span>
             </div>
             <div class="icon-txt d-flex flex-col">
-                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
-                <span>Mute</span>
+                <span class="icon active"><i class="fa-solid fa-share-from-square"></i></span>
+                <span>Share Screen</span>
             </div>
             <span class="chevron-up"><i class="fa-solid fa-chevron-up"></i></span>
             <div class="icon-txt d-flex flex-col">
-                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
-                <span>Mute</span>
+                <span class="icon"><i class="fa-solid fa-comment"></i></span>
+                <span>Chat</span>
             </div>
             <div class="icon-txt d-flex flex-col">
-                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
-                <span>Mute</span>
+                <span class="icon"><i class="fa-solid fa-record-vinyl"></i></span>
+                <span>Record</span>
             </div>
             <div class="icon-txt d-flex flex-col">
-                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
-                <span>Mute</span>
+                <span class="icon"><i class="fa-solid fa-grid-2"></i></span>
+                <span>Breakout Rooms</span>
             </div>
             <div class="icon-txt d-flex flex-col">
-                <span class="icon"><i class="fa-solid fa-microphone"></i></span>
-                <span>Mute</span>
+                <span class="icon"><i class="fa-solid fa-ellipsis"></i></span>
+                <span>More</span>
             </div>
         </div>
         <div class="ft-right d-flex align-center justify-center">
