--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <header class="d-flex align-center flex-end">
         <div class="btn-wrapper">
-            <span><i class="fa-solid fa-grid"></i>Speaker View</span>
-            <span><i class="fa-solid fa-maximize"></i></span>
+            <button><i class="fa-solid fa-table-cells-large"></i>Speaker View</button>
+            <button><i class="fa-solid fa-maximize"></i></button>
         </div>
     </header>
 
-    <main class="flex wrap">
+    <main class="d-flex wrap justify-center">
         <div class="user">
             <img src="https://picsum.photos/id/1012/300/200" alt="Pinco Pallo">
             <div class="username"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
