--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <span>Record</span>
             </div>
             <div class="icon-txt d-flex flex-col">
-                <span class="icon"><i class="fa-solid fa-grid-2"></i></span>
+                <span class="icon"><i class="fa-solid fa-table-cells-large"></i></span>
                 <span>Breakout Rooms</span>
             </div>
             <div class="icon-txt d-flex flex-col">
